--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Devi's site kinda</title>
     </head>
     <body>
-        <p1>helloooooo</p1>
+        <p>Kinda under construction</p>
     </body>
 </html>
