added new files, updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Devi's site kinda</title>
-    </head>
-    <body>
-        <p>Kinda under construction</p>
-    </body>
+
+<head>
+    <title>Welcome</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <div id="main">
+        <h1 id="welcome">Welcome</h1>
+        <p><a title="about" href="about.html">About</a></p>
+        <p><a title="manga" href="manga.html">Manga List</a></p>
+        <p><a title="anime" href="anime.html">Anime List</a></p>
+        <a target="_blank" title="twitter" href="https://twitter.com/Hopeless_Denvy">
+            <img id="twitter" src="images\twitter.png" alt="Italian Trulli">
+        </a>
+    </div>
+</body>
+
 </html>
