--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <div id="main">
         <p><a class="link" title="about" href="about.html">About</a></p>
         <p><a class="link" title="manga" href="manga.html">Manga List</a></p>
@@ -18,8 +18,9 @@
             <img class="link" id="twitter" src="images\twitter.png" alt="twitter">
         </a>
     </div>
-    <h1 id="welcome" onclick="reduce()">Welcome</h1>
-
+    <div id="sub">
+        <h1 id="welcome" onclick="reduce()">Welcome</h1>
+    </div>
 </body>
 
 </html>
