--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-
     <div id="main">
-        <p><a class="link" title="about" href="about.html">About</a></p>
-        <p><a class="link" title="manga" href="manga.html">Manga List</a></p>
-        <p><a class="link" title="anime" href="anime.html">Anime List</a></p>
-        <a target="_blank" id="link" title="twitter" href="https://twitter.com/Hopeless_Denvy">
-            <img class="link" id="twitter" src="images\twitter.png" alt="twitter">
-        </a>
-    </div>
-    <div id="sub">
+
+        <div id="links">
+            <p><a class="link" title="about" href="about.html">About</a></p>
+            <p><a class="link" title="manga" href="manga.html">Manga List</a></p>
+            <p><a class="link" title="anime" href="anime.html">Anime List</a></p>
+            <a target="_blank" id="link" title="twitter" href="https://twitter.com/Hopeless_Denvy">
+                <img class="link" id="twitter" src="images\twitter.png" alt="twitter">
+            </a>
+        </div>
         <h1 id="welcome" onclick="reduce()">Welcome</h1>
     </div>
 </body>
