added frost glass effect

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <div class="container">
     <div id="main">
-
+        
         <div id="links">
             <p><a class="link" title="about" href="about.html">About</a></p>
             <p><a class="link" title="manga" href="manga.html">Manga List</a></p>
@@ -20,6 +21,7 @@
             </a>
         </div>
         <h1 id="welcome" onclick="reduce()">Welcome</h1>
+    </div>
     </div>
 </body>
 
