--- a/about.html
+++ b/about.html
@@ -4,6 +4,6 @@
         <title>About Dedvi</title>
     </head>
     <body>
-        <p>This is just a test tbh cause it's not like anyone actually cares</p>
+        <p>Noone really cares about this so this just gonna stay here like this for now</p>
     </body>
 </html>
